Update front - add index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Docker Apache Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Accueil - Vulnfood</title>
 </head>
 <body>
-    <h1>Welcome to My Docker Apache Website</h1>
-    <p>This website is running in a Docker container with Apache!</p>
+    <nav>
+      <div class="title">Vulnfood</div>
+      <a href="html/login.html" class="switch-button">Connexion</a>
+      <a href="html/register.html" class="switch-button">Inscription</a>
+    </nav>
+  <div class="container">
+    <h1>Bienvenue sur Vulnfood</h1>
+    <p>Le site qui vous permet de trouver des produits de saisons faits maison !</p>
+  </div>
+
+  <footer>
+    <img src="img/image.png" alt="Footer image">
+  </footer>
 </body>
 </html>
