--- a/src/html/login.html
+++ b/src/html/login.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="login.js"></script>
   <title>Connexion - Vulnfood</title>
 </head>
 <body>
@@ -12,15 +14,14 @@
       <a href="register.html" class="switch-button">Inscription</a>
     </nav>
   <div class="container">
-    <form action="/login" method="POST">
+    
       <label for="username">Email :</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="mailinput" name="username" required>
 
       <label for="password">Mot de passe:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="passinput" name="password" required>
 
-      <button type="submit">Se connecter</button>
-    </form>
+      <button type="submit" onclick="login()">Se connecter</button>
   </div>
 
   <footer>
