--- a/src/html/register.html
+++ b/src/html/register.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
+  <script src="register.js"></script>
   <title>Inscription</title>
 </head>
 <body>
@@ -12,21 +13,19 @@
         <a href="login.html" class="switch-button">Connexion</a>
     </nav>
     <div class="container">
-    <form action="/register" method="POST">
-      <label for="username">Nom :</label>
-      <input type="text" id="username" name="username" required>
+      <label for="lastname">Nom :</label>
+      <input type="text" id="lastname" name="lastname" required>
       
-      <label for="username">Prénom :</label>
-      <input type="text" id="username" name="username" required>
+      <label for="firstname">Prénom :</label>
+      <input type="text" id="firstname" name="firstname" required>
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="mailinput" name="email" required>
 
       <label for="password">Mot de passe:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="passinput" name="password" required>
 
-      <button type="submit">S'inscrire</button>
-    </form>
+      <button type="submit" onclick="register()">S'inscrire</button>
   </div>
   <footer>
     <img src="../img/image.png" alt="Footer image">
