--- a/src/html/login.html
+++ b/src/html/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="login.js"></script>
+  <script src="../js/login.js"></script>
   <title>Connexion - Vulnfood</title>
 </head>
 <body>
