--- a/src/html/register.html
+++ b/src/html/register.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="../js/register.js"></script>
+  <script src="../js/main.js">setInterval(cookieCheck(), 200)</script>
   <title>Inscription</title>
 </head>
 <body>
