--- a/src/html/personal_info.html
+++ b/src/html/personal_info.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Infos Personnelles</title>
   <link rel="stylesheet" href="../css/style.css">
-  <script src="personal_info.js" defer></script>
+  <script src="../js/personal_info.js" defer></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
   <nav>
