--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-  <script src="../js/main.js">setInterval(cookieCheck(), 200)</script>
+  <script src="../js/main.js"></script>
   <title>Votre Panier</title>
 </head>
 <body>
