Fix disconnect function

--- a/src/html/personal_info.html
+++ b/src/html/personal_info.html
@@ -14,7 +14,7 @@
     <a href="personal_info.html" class="switch-button">Infos</a>
     <a href="articles.html" class="switch-button">Articles</a>
     <a href="cart.html" class="switch-button">Panier</a>
-    <a href="login.html" class="switch-button">Déconnexion</a>
+    <a onclick="disconnect()" class="switch-button">Déconnexion</a>
   </nav>
 
   <div class="container">
