--- a/src/html/personal_info.html
+++ b/src/html/personal_info.html
@@ -6,6 +6,7 @@
   <title>Infos Personnelles</title>
   <link rel="stylesheet" href="../css/style.css">
   <script src="../js/personal_info.js" defer></script>
+  <script src="../js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
