Profile picutre management

--- a/src/html/personal_info.html
+++ b/src/html/personal_info.html
@@ -24,6 +24,7 @@
       <p><strong>Email:</strong> <span id="email"> </span></p>
       <p><strong>Nom:</strong> <span id="nom"> </span></p>
       <p><strong>Prenom:</strong> <span id="prenom"> </span></p>
+      <p><strong>Photo de profil:</strong> <span id="profilepicture"> </span></p>
     </div>
 
     <!-- Formulaire de modification -->
@@ -36,6 +37,9 @@
 
       <label for="password">Mot de passe:</label>
       <input type="password" id="password_input" name="password"><br>
+
+      <label for="profile_picture">Ajouter une photo de profil</label>
+      <input type="file" id="profile_picture_input" name="profile_picture"><br>
 
       <button type="submit">Sauvegarder</button>
     </form>
