--- a/src/html/personal_info.html
+++ b/src/html/personal_info.html
@@ -21,28 +21,28 @@
   <div class="container">
     <!-- Section pour afficher les informations de l'utilisateur, cachée lors de la modification -->
     <div id="infoSection">
-      <p><strong>Email:</strong> <span id="email"> </span></p>
-      <p><strong>Nom:</strong> <span id="nom"> </span></p>
-      <p><strong>Prenom:</strong> <span id="prenom"> </span></p>
-      <p><strong>Photo de profil:</strong> <span id="profilepicture"> </span></p>
+      <p><strong>Email:</strong></p>
+      <div id="email"> </div>
+      <p><strong>Nom:</strong></p>
+      <div id="nom"> </div>
+      <p><strong>Prenom:</strong></p>
+      <div id="prenom"> </div>
+      <br>
     </div>
 
     <!-- Formulaire de modification -->
-    <form action="personal_info.php" method="POST" id="updateForm" style="display: none;">
+    <div id="updateForm" style="display: none;">
       <label for="nom">Nom:</label>
       <input type="text" id="nom_input" name="nom"><br>
 
       <label for="prenom">Prenom:</label>
       <input type="text" id="prenom_input" name="prenom"><br>
 
-      <label for="password">Mot de passe:</label>
+      <label for="password">Confirmez avec votre mot de passe:</label>
       <input type="password" id="password_input" name="password"><br>
 
-      <label for="profile_picture">Ajouter une photo de profil</label>
-      <input type="file" id="profile_picture_input" name="profile_picture"><br>
-
-      <button type="submit">Sauvegarder</button>
-    </form>
+      <button type="submit" onclick="updateProfile()">Sauvegarder</button>
+    </div>
 
     <!-- Bouton de modification -->
     <button id="editButton" onclick="toggleEditForm()">Modifier vos informations</button>
