--- a/src/html/personal_info.html
+++ b/src/html/personal_info.html
@@ -13,8 +13,7 @@
   <nav>
     <div class="title">Vulnfood</div>
     <a href="personal_info.html" class="switch-button">Infos</a>
-    <a href="articles.html" class="switch-button">Articles</a>
-    <a href="cart.html" class="switch-button">Panier</a>
+    <a href="articles.html" class="switch-button">Menu</a>
     <a onclick="disconnect()" class="switch-button">Déconnexion</a>
   </nav>
 
