--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,16 @@
       <a href="html/register.html" class="switch-button">Inscription</a>
     </nav>
   <div class="container">
-    <h1>Bienvenue sur Vulnfood</h1>
-    <p>Le site qui vous permet de trouver des produits de saisons faits maison !</p>
+    <h1>Bienvenue chez Vulnfood</h1>
+    <p>Découvrez une expérience culinaire inoubliable où tradition et saveurs authentiques se rencontrent. Que vous soyez amateur de classiques comme la soupe à l'oignon ou à la recherche d'un délice sucré avec notre tiramisu maison, chaque plat est préparé avec soin et passion.</p>
+
+    <p>Nos Spécialités :</p>
+    <ul>
+      <li>🍴 Steak Frites savoureux, Poulet Rôti tendre, et Risotto aux Champignons parfumé.</li>
+      <li>🍷 Une sélection de boissons pour accompagner vos repas, du vin rouge raffiné à un expresso corsé.</li>
+    </ul>
+    
+    <p>Prenez place et laissez-vous séduire par une cuisine qui réchauffe le cœur et satisfait toutes les envies.</p>
   </div>
 
   <footer>
